--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <div class="max-width">
             <h2 class="title">My Projects</h2>
             <div class="proj-content">
+                
             </div>
         </div>
     </section>
@@ -77,7 +78,7 @@
                     <div class="text">My skills & experiences.</div>
                     <p>Through my studies in college, I have developed a fundamental knowledge on web development and I also passed my certification exam for IT Specialist in Databases</p>
                 </div>
-                <div class="column right">
+                <div class="column right ">
                     <div class="bars">
                         <div class="info">
                             <span>HTML</span>
@@ -106,6 +107,11 @@
                     <div class="bars">
                         <div class="info">
                             <span>Responsive Web Design</span>
+                        </div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Boot</span>
                         </div>
                     </div>
                 </div>
