--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>Boot</span>
+                            <span>Bootstrap</span>
                         </div>
                     </div>
                 </div>
