--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
+
 </head>
 <body>
     <div class="scroll-up-btn">
@@ -21,6 +24,8 @@
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#projects" class="menu-btn">Projects</a></li>
+                <li><a href="#certifications" class="menu-btn">Certifications</a></li>
+                <li><a href="#certificates" class="menu-btn">Certificates</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
@@ -65,6 +70,70 @@
             <h2 class="title">My Projects</h2>
             <div class="proj-content">
                 
+            </div>
+        </div>
+    </section>
+    <!-- certifications section start -->
+    <section class="certifications" id="certifications">
+        <div class="max-width">
+            <h2 class="title">My Certifications</h2>
+            <div class="carousel owl-carousel">
+                <div class="card">
+                    <div class="box">
+                        <a href="https://drive.google.com/file/d/1e06FmyyHyjT5WXx9dM4UGq72G_q6Ygsw/view?usp=sharing" target="_blank">
+                            <img src="images/IT Specialist - Databases.jpg" alt="">
+                        </a>
+                        <div class="text">Certified IT Specialist - Databases </div>
+                        <a class="verify" href="https://www.credly.com/badges/4534182a-38b1-4151-97a5-b46c0578f699/public_url" target="_blank">
+                            <p>Verify</p>
+                        </a>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </section>
+    <!-- certificates section start -->
+    <section class="certificates" id="certificates">
+        <div class="max-width">
+            <h2 class="title">My Certificates</h2>
+            <div class="carousels owl-carousel">
+                <!--
+                <div class="card">
+                    <div class="box">
+                        <img src="images/Profile Pic.jpg" alt="">
+                        <div class="text">Someone name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/Profile Pic.jpg" alt="">
+                        <div class="text">Someone name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/Profile Pic.jpg" alt="">
+                        <div class="text">Someone name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/Profile Pic.jpg" alt="">
+                        <div class="text">Someone name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/Profile Pic.jpg" alt="">
+                        <div class="text">Someone name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>-->
             </div>
         </div>
     </section>
@@ -132,28 +201,28 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Jan Alexandrei Macario</div>
+                                <a class="sub-title">Jan Alexandrei Macario</a>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Address</div>
-                                <div class="sub-title">Cabanatuan City, Philippines</div>
+                                <a class="sub-title">Cabanatuan City, Philippines</a>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">alexandreigutierrez5131@gmail.com</div>
+                                <a class="sub-title gmail" href=mailto:alexandreigutierrez5131@gmail.com>alexandreigutierrez5131@gmail.com</a>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fa-brands fa-linkedin"></i>
                             <div class="info">
                                 <div class="head">LinkedIn</div>
-                                <a id="linkedIn" href="https://www.linkedin.com/in/janmacario/">www.linkedin.com/in/janmacario</a>
+                                <a class="sub-title linkedIn" href="https://www.linkedin.com/in/janmacario/">www.linkedin.com/in/janmacario</a>
                             </div>
                         </div>
                     </div>
