--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="card">
                     <div class="box">
                         <a href="https://drive.google.com/file/d/1e06FmyyHyjT5WXx9dM4UGq72G_q6Ygsw/view?usp=sharing" target="_blank">
-                            <img src="images/IT Specialist - Databases.jpg" alt="">
+                            <img src="images/IT Specialist - Databases.JPG" alt="">
                         </a>
                         <div class="text">Certified IT Specialist - Databases </div>
                         <a class="verify" href="https://www.credly.com/badges/4534182a-38b1-4151-97a5-b46c0578f699/public_url" target="_blank">
