--- a/index.html
+++ b/index.html
@@ -80,13 +80,20 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <a href="https://drive.google.com/file/d/1e06FmyyHyjT5WXx9dM4UGq72G_q6Ygsw/view?usp=sharing" target="_blank">
-                            <img src="images/IT Specialist - Databases.JPG" alt="">
-                        </a>
+                        <div class="image">
+                            <a target="_blank">
+                                <img src="images/IT Specialist - Databases.jpg" alt="">
+                            </a>
+                        </div>
                         <div class="text">Certified IT Specialist - Databases </div>
-                        <a class="verify" href="https://www.credly.com/badges/4534182a-38b1-4151-97a5-b46c0578f699/public_url" target="_blank">
-                            <p>Verify</p>
-                        </a>
+                        <div class="ViewVerify">
+                            <a class="view" href="https://drive.google.com/file/d/1e06FmyyHyjT5WXx9dM4UGq72G_q6Ygsw/view?usp=sharing" target="_blank">
+                                View
+                            </a>
+                            <a class="verify" href="https://www.credly.com/badges/4534182a-38b1-4151-97a5-b46c0578f699/public_url" target="_blank">
+                                Verify
+                            </a>
+                        </div>
                     </div>
                 </div>
                 
@@ -97,43 +104,60 @@
     <section class="certificates" id="certificates">
         <div class="max-width">
             <h2 class="title">My Certificates</h2>
-            <div class="carousels owl-carousel">
-                <!--
+            <div class="carousel1 owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="images/Profile Pic.jpg" alt="">
+                        <div>
+                            <img src="images/Penetration Testing, Incident Response and Forensics.jpg" alt="">
+                        </div>
+                        <div class="text">Penetration Testing, Incident Response and Forensics</div>
+                        <div class="ViewVerify">
+                            <a class="view" href="https://drive.google.com/file/d/1JCENJHt4USuYCntrRzkYfmaQOdL9GV-c/view?usp=sharing" target="_blank">
+                                View
+                            </a>
+                            <a class="verify" href="https://www.credly.com/badges/4534182a-38b1-4151-97a5-b46c0578f699/public_url" target="_blank">
+                                Verify
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <div>
+                            <img src="images/Assets, Threats, and Vulnerabilities.jpg" alt="">
+                        </div>
+                        <div class="text">Assets, Threats, and Vulnerabilities</div>
+                        <div class="ViewVerify">
+                            <a class="view" href="https://drive.google.com/file/d/1JCENJHt4USuYCntrRzkYfmaQOdL9GV-c/view?usp=sharing" target="_blank">
+                                View
+                            </a>
+                            <a class="verify" href="https://www.credly.com/badges/4534182a-38b1-4151-97a5-b46c0578f699/public_url" target="_blank">
+                                Verify
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/Penetration Testing, Incident Response and Forensics.jpg" alt="">
                         <div class="text">Someone name</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/Profile Pic.jpg" alt="">
+                        <img src="images/Penetration Testing, Incident Response and Forensics.jpg" alt="">
                         <div class="text">Someone name</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/Profile Pic.jpg" alt="">
+                        <img src="images/Penetration Testing, Incident Response and Forensics.jpg" alt="">
                         <div class="text">Someone name</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/Profile Pic.jpg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/Profile Pic.jpg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>-->
             </div>
         </div>
     </section>
@@ -145,7 +169,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My skills & experiences.</div>
-                    <p>Through my studies in college, I have developed a fundamental knowledge on web development and I also passed my certification exam for IT Specialist in Databases</p>
+                    <p>Through my studies in college, I have developed a fundamental knowledge on web development and I also passed my international certification exam for IT Specialist in Databases</p>
                 </div>
                 <div class="column right">
                     <div class="bars">
