--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             <a class="view" href="https://drive.google.com/file/d/1JCENJHt4USuYCntrRzkYfmaQOdL9GV-c/view?usp=sharing" target="_blank">
                                 View
                             </a>
-                            <a class="verify" href="https://www.credly.com/badges/4534182a-38b1-4151-97a5-b46c0578f699/public_url" target="_blank">
+                            <a class="verify" href="https://coursera.org/share/148742a230a795b8b22e86363cac0542" target="_blank">
                                 Verify
                             </a>
                         </div>
