--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div class="box">
                         <div class="image">
                             <a target="_blank">
-                                <img src="images/IT Specialist - Databases.jpg" alt="">
+                                <img src="images/IT Specialist - Databases.JPG" alt="">
                             </a>
                         </div>
                         <div class="text">Certified IT Specialist - Databases </div>
