--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <div class="card">
                     <div class="box">
                         <div>
-                            <img src="images/Assets, Threats, and Vulnerabilities.jpg" alt="">
+                            <img src="images/Assets, Threats, and Vulnerabilities.JPG" alt="">
                         </div>
                         <div class="text">Assets, Threats, and Vulnerabilities</div>
                         <div class="ViewVerify">
