--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <a class="view" href="https://drive.google.com/file/d/1JCENJHt4USuYCntrRzkYfmaQOdL9GV-c/view?usp=sharing" target="_blank">
                                 View
                             </a>
-                            <a class="verify" href="https://www.credly.com/badges/4534182a-38b1-4151-97a5-b46c0578f699/public_url" target="_blank">
+                            <a class="verify" href="https://www.coursera.org/account/accomplishments/verify/UFY4HEMUBHFJ?utm_source%3Dandroid%26utm_medium%3Dcertificate%26utm_content%3Dcert_image%26utm_campaign%3Dsharing_cta%26utm_product%3Dcourse" target="_blank">
                                 Verify
                             </a>
                         </div>
