--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Alex and I'm a <span class="typing-2"></span></div>
-                    <p>I'm looking for a position as a web developer where I can use the knowledge and analytical 
-                        abilities I have developed while pursuing a degree in information technology. Looking for a dynamic, 
-                        forward-thinking company where my skills can be used to their fullest potential.</p>
+                    <p>Through my studies in college, I have developed a fundamental knowledge on web development and I also passed my international certification exam for IT Specialist in Databases</p>
                 </div>
             </div>
         </div>
@@ -82,7 +80,7 @@
                     <div class="box">
                         <div class="image">
                             <a target="_blank">
-                                <img src="images/IT Specialist - Databases.JPG" alt="">
+                                <img src="images/cert/IT Specialist - Databases.JPG" alt="">
                             </a>
                         </div>
                         <div class="text">Certified IT Specialist - Databases </div>
@@ -108,7 +106,7 @@
                 <div class="card">
                     <div class="box">
                         <div>
-                            <img src="images/Penetration Testing, Incident Response and Forensics.jpg" alt="">
+                            <img src="images/certs/Penetration Testing, Incident Response and Forensics.jpg" alt="">
                         </div>
                         <div class="text">Penetration Testing, Incident Response and Forensics</div>
                         <div class="ViewVerify">
@@ -124,7 +122,7 @@
                 <div class="card">
                     <div class="box">
                         <div>
-                            <img src="images/Assets, Threats, and Vulnerabilities.JPG" alt="">
+                            <img src="images/certs/Assets, Threats, and Vulnerabilities.JPG" alt="">
                         </div>
                         <div class="text">Assets, Threats, and Vulnerabilities</div>
                         <div class="ViewVerify">
@@ -132,6 +130,38 @@
                                 View
                             </a>
                             <a class="verify" href="https://coursera.org/share/148742a230a795b8b22e86363cac0542" target="_blank">
+                                Verify
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <div>
+                            <img src="images/certs/Tools of the Trade - Linux and SQL.PNG" alt="">
+                        </div>
+                        <div class="text">Tools of the Trade - Linux and SQL</div>
+                        <div class="ViewVerify">
+                            <a class="view" href="https://drive.google.com/file/d/1UErG3iNN1T-pkwT4QmMisrE77-uia4MM/view?usp=sharing" target="_blank">
+                                View
+                            </a>
+                            <a class="verify" href="https://coursera.org/share/7d681f87faa03738ccd67a810953f1f4" target="_blank">
+                                Verify
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <div>
+                            <img src="images/certs/Connect and Protect - Networks and Network Security.JPG" alt="">
+                        </div>
+                        <div class="text">Connect and Protect: Networks and Network Security</div>
+                        <div class="ViewVerify">
+                            <a class="view" href="https://drive.google.com/file/d/1nuIh4ot2rCZffsGtnL7p5IhU0p5UrgXS/view?usp=sharing" target="_blank">
+                                View
+                            </a>
+                            <a class="verify" href="https://coursera.org/share/98ae27d271d95d98fba4562ff055dbd7" target="_blank">
                                 Verify
                             </a>
                         </div>
@@ -146,45 +176,38 @@
         <div class="max-width">
             <h2 class="title">Skills</h2>
             <div class="skills-content">
-                <div class="column left">
-                    <div class="text">My skills & experiences.</div>
-                    <p>Through my studies in college, I have developed a fundamental knowledge on web development and I also passed my international certification exam for IT Specialist in Databases</p>
-                </div>
-                <div class="column right">
-                    <div class="bars">
-                        <div class="info">
-                            <span>HTML</span>
-                        </div>
+                <div class="columnSkills">
+                    <div class="info">
+                        <img class="infoLogo" src="images/logo/html.png" alt="html">
+                        <span>HTML</span>
                     </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>CSS</span>
-                        </div>
+                    <div class="info">
+                        <img class="infoLogo" src="images/logo/css.png" alt="css">
+                        <span>CSS</span>
                     </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>JavaScript</span>
-                        </div>
+                    <div class="info">
+                        <img class="infoLogo" src="images/logo/bs.png" alt="bootstrap">
+                        <span>Bootstrap</span>
                     </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>PHP</span>
-                        </div>
+                    <div class="info">
+                        <img class="infoLogo" src="images/logo/js.png" alt="JavaScript">
+                        <span>JavaScript</span>
                     </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>MySQL</span>
-                        </div>
+                    <div class="info">
+                        <img class="infoLogo" src="images/logo/jquery.png" alt="JQuery">
+                        <span>JQuery</span>
                     </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>Responsive Web Design</span>
-                        </div>
+                    <div class="info">
+                        <img class="infoLogo" src="images/logo/mysql.png" alt="MySQL">
+                        <span>MySQL</span>
                     </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>Bootstrap</span>
-                        </div>
+                    <div class="info">
+                        <img class="infoLogo" src="images/logo/php.png" alt="PHP">
+                        <span>PHP</span>
+                    </div>
+                    <div class="info">
+                        <img class="infoLogo" src="images/logo/rwd.png" alt="Responsive Web Design">
+                        <span>Responsive Web Design</span>
                     </div>
                 </div>
             </div>
@@ -201,31 +224,38 @@
                     <p>Whether you have a question, a collaboration opportunity, or just want to connect, I'm excited to hear from you.</p>
                     <div class="icons">
                         <div class="row">
-                            <i class="fas fa-user"></i>
+                            <i class="fas fa-user name"></i>
                             <div class="info">
                                 <div class="head">Name</div>
                                 <a class="sub-title">Jan Alexandrei Macario</a>
                             </div>
                         </div>
                         <div class="row">
-                            <i class="fas fa-map-marker-alt"></i>
+                            <i class="fa-solid fa-location-dot loc"></i>
                             <div class="info">
                                 <div class="head">Address</div>
-                                <a class="sub-title">Cabanatuan City, Philippines</a>
+                                <a class="sub-title">Nueva Ecija, Philippines</a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fa-brands fa-facebook"></i>
+                            <div class="info">
+                                <div class="head">Facebook</div>
+                                <a class="sub-title facebook" href="https://www.facebook.com/alexandrei.gutierrez.3" target="_blank">Jan Alexandrei Macario</a>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <a class="sub-title gmail" href=mailto:alexandreigutierrez5131@gmail.com>alexandreigutierrez5131@gmail.com</a>
+                                <a class="sub-title email" href=mailto:alexandreigutierrez5131@gmail.com target="_blank">alexandreigutierrez5131@gmail.com</a>
                             </div>
                         </div>
                         <div class="row">
-                            <i class="fa-brands fa-linkedin"></i>
+                            <i class="fa-brands fa-linkedin linkedIn"></i>
                             <div class="info">
                                 <div class="head">LinkedIn</div>
-                                <a class="sub-title linkedIn" href="https://www.linkedin.com/in/janmacario/">www.linkedin.com/in/janmacario</a>
+                                <a class="sub-title linkedIn" href="https://www.linkedin.com/in/janmacario/" target="_blank">www.linkedin.com/in/janmacario</a>
                             </div>
                         </div>
                     </div>
