--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#projects" class="menu-btn">Projects</a></li>
+                <li><a href="#experience" class="menu-btn">Experience</a></li>
                 <li><a href="#certifications" class="menu-btn">Certifications</a></li>
                 <li><a href="#certificates" class="menu-btn">Certificates</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
@@ -57,6 +58,7 @@
                 <div class="column right">
                     <div class="text">I'm Alex and I'm a <span class="typing-2"></span></div>
                     <p>Through my studies in college, I have developed a fundamental knowledge on web development and I also passed my international certification exam for IT Specialist in Databases</p>
+                    <a href="Macario Resume.pdf" target="_blank" download>Download CV</a>
                 </div>
             </div>
         </div>
@@ -68,6 +70,46 @@
             <h2 class="title">My Projects</h2>
             <div class="proj-content">
                 
+            </div>
+        </div>
+    </section>
+    <section class="experience" id="experience">
+        <div class="max-width">
+            <h2 class="title">My Experience</h2>
+            <div class="experience-content">
+                <div class="timeline">
+                    <div class="container left">
+                      <div class="content">
+                        <h2>January - April 2024</h2>
+                        <h3>Cabanatuan City Fire Station NEBFP R3</h3>
+                        <h4>IT Intern</h4><br>
+                        <ul>
+                            <li>IT Support</li>
+                            <li>Troubleshooting & Inventory of ICT Equipments</li>
+                            <li>Data Management</li>
+                            <li>File Sorting</li>
+                            <li>Profiling</li>
+                            <li>Adding Backlogs & New Applications to BFP Portal</li>
+                            <li>Printing Certificates</li>
+
+                        </ul>
+                      </div>
+                    </div>
+                    <div class="container right">
+                      <div class="content">
+                        <h2>January - February 2020</h2>
+                        <h3>Prime Water Infrastructure Corp. Cabanatuan City</h3>
+                        <h4>Work Immersion</h4><br>
+
+                        <ul>
+                            <li>Data Management</li>
+                            <li>File Sorting</li>
+                            <li>Adding New subscriber to Water Line Map</li>
+                            <li>Distributing Files to Different Department</li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
             </div>
         </div>
     </section>
@@ -256,6 +298,13 @@
                             <div class="info">
                                 <div class="head">LinkedIn</div>
                                 <a class="sub-title linkedIn" href="https://www.linkedin.com/in/janmacario/" target="_blank">www.linkedin.com/in/janmacario</a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fa-brands fa-skype skype"></i>
+                            <div class="info">
+                                <div class="head">Skype</div>
+                                <a class="sub-title linkedIn" href="https://join.skype.com/invite/xw95hdwCuco8" target="_blank">live:alexandreigutierrez5131</a>
                             </div>
                         </div>
                     </div>
