--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
 
 </head>
+
 <body>
+    
     <div class="scroll-up-btn">
         <i class="fas fa-angle-up"></i>
     </div>
@@ -58,7 +60,7 @@
                 <div class="column right">
                     <div class="text">I'm Alex and I'm a <span class="typing-2"></span></div>
                     <p>Through my studies in college, I have developed a fundamental knowledge on web development and I also passed my international certification exam for IT Specialist in Databases</p>
-                    <a href="Macario Resume.pdf" target="_blank" download>Download CV</a>
+                    <a href="files/Macario Resume.pdf" target="_blank" download>Download CV</a>
                 </div>
             </div>
         </div>
@@ -127,7 +129,7 @@
                         </div>
                         <div class="text">Certified IT Specialist - Databases </div>
                         <div class="ViewVerify">
-                            <a class="view" href="https://drive.google.com/file/d/1e06FmyyHyjT5WXx9dM4UGq72G_q6Ygsw/view?usp=sharing" target="_blank">
+                            <a class="view" href="images/cert/IT Specialist - Databases.JPG" target="_blank">
                                 View
                             </a>
                             <a class="verify" href="https://www.credly.com/badges/4534182a-38b1-4151-97a5-b46c0578f699/public_url" target="_blank">
@@ -152,7 +154,7 @@
                         </div>
                         <div class="text">Penetration Testing, Incident Response and Forensics</div>
                         <div class="ViewVerify">
-                            <a class="view" href="https://drive.google.com/file/d/1JCENJHt4USuYCntrRzkYfmaQOdL9GV-c/view?usp=sharing" target="_blank">
+                            <a class="view" href="images/certs/Penetration Testing, Incident Response and Forensics.jpg" target="_blank">
                                 View
                             </a>
                             <a class="verify" href="https://www.coursera.org/account/accomplishments/verify/UFY4HEMUBHFJ?utm_source%3Dandroid%26utm_medium%3Dcertificate%26utm_content%3Dcert_image%26utm_campaign%3Dsharing_cta%26utm_product%3Dcourse" target="_blank">
@@ -168,7 +170,7 @@
                         </div>
                         <div class="text">Assets, Threats, and Vulnerabilities</div>
                         <div class="ViewVerify">
-                            <a class="view" href="https://drive.google.com/file/d/1JCENJHt4USuYCntrRzkYfmaQOdL9GV-c/view?usp=sharing" target="_blank">
+                            <a class="view" href="images/certs/Assets, Threats, and Vulnerabilities.JPG" target="_blank">
                                 View
                             </a>
                             <a class="verify" href="https://coursera.org/share/148742a230a795b8b22e86363cac0542" target="_blank">
@@ -184,7 +186,7 @@
                         </div>
                         <div class="text">Tools of the Trade - Linux and SQL</div>
                         <div class="ViewVerify">
-                            <a class="view" href="https://drive.google.com/file/d/1UErG3iNN1T-pkwT4QmMisrE77-uia4MM/view?usp=sharing" target="_blank">
+                            <a class="view" href="images/certs/Tools of the Trade - Linux and SQL.PNG" target="_blank">
                                 View
                             </a>
                             <a class="verify" href="https://coursera.org/share/7d681f87faa03738ccd67a810953f1f4" target="_blank">
@@ -200,7 +202,7 @@
                         </div>
                         <div class="text">Connect and Protect: Networks and Network Security</div>
                         <div class="ViewVerify">
-                            <a class="view" href="https://drive.google.com/file/d/1nuIh4ot2rCZffsGtnL7p5IhU0p5UrgXS/view?usp=sharing" target="_blank">
+                            <a class="view" href="images/certs/Connect and Protect - Networks and Network Security.JPG" target="_blank">
                                 View
                             </a>
                             <a class="verify" href="https://coursera.org/share/98ae27d271d95d98fba4562ff055dbd7" target="_blank">
